# soia-python-gen

./: .gitignore  README.md  package-lock.json  package.json  pre_commit.sh
.github/workflows/: ci.yml
e2e-test/: package.json  pyproject.toml  requirements.txt  soia.yml
e2e-test/src/: enums.soia  goldens.soia  methods.soia  structs.soia
e2e-test/tests/: test_goldens.py  test_soiagen.py
src/: class_speller.ts  index.ts  py_type.ts  type_speller.ts
